<resources>
    <string name="app_name">干货私囊</string>
    <!--nav_head -->
    <string name="nav_default">   </string>
    <string name="nav_home">主页</string>
    <string name="nav_meizi">精选美图</string>
    <string name="nav_mark">收藏</string>
    <string name="nav_change_theme">切换主题</string>
    <string name="nac_setting">设置</string>
    <string name="nav_anout">关于</string>
    <string name="default_name">Ganker</string>

    <!-- -->
    <string name="look_around">Look Around</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_add_to_bookmarks">添加到收藏列表</string>
    <string name="action_share_article">分享文章</string>
    <string name="action_copy_link">复制链接地址</string>
    <string name="action_open_in_browser">在浏览器中打开</string>
    <string name="action_copy_text">复制文本</string>
    <string name="loaded_failed">加载失败</string>
    <string name="loaded_success">加载成功</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="save_fail_no_permission">没有访问权限</string>
    <string name="retry">重新加载</string>
    <string name="share_error">分享失败</string>
    <string name="no_browser_found">没有找到浏览器</string>
    <string name="copied_to_clipboard">复制成功</string>
    <string name="copied_to_clipboard_failed">复制失败</string>
    <string name="added_to_bookmarks">成功添加到收藏夹</string>
    <string name="deleted_from_bookmarks">删除成功</string>
    <string name="not_net_work">没有网络连接</string>
    <string name="bookmarks_Android_title">Android</string>
    <string name="bookmarks_Front_title">前端</string>
    <string name="bookmarks_Ios_title">IOS</string>


    <string name="about">关于</string>
    <string name="about_version">版本:V1.0</string>
    <string name="about_please">大三狗求实习机会=。=</string>
    <string name="about_name">Swy</string>
    <string name="about_anthor">关于我</string>
    <string name="about_support">反馈/支持</string>
    <string name="about_bug">反馈Bug</string>
    <string name="about_commit_bug">yeshuwei911@gmail.com</string>
    <string name="about_email">我的联系方式</string>
    <string name="about_thank">致谢</string>
    <string name="anout_thank_gank">感谢干货集中营无私的提供Api</string>


    <string name="basic_settings">基本设置</string>
    <string name="setting_no_pic">无图模式</string>
    <string name="setting_no_pic_summary">阅读时不加载图片</string>
    <string name="setting_time_of_saving_article">缓存周期</string>
    <string name="setting_other">其他设置</string>
    <string name="setting_clear_glide_cache">清除缓存</string>
    <string name="clear_image_cache_successfully">清理成功</string>
    <string name="setting_title">设置</string>


    <string name="sendto">mailto:yeshuwei911@gmail.com</string>
    <string name="mail_topic">Gank使用反馈</string>
    <string name="device_model">手机型号</string>
    <string name="sdk_version">SDK版本</string>
    <string name="easter_egg">彩蛋</string>
    <string name="easter_egg_content">点这么多下我名字,是不是觉得我比文彬帅!</string>
    <string name="sure">肯定</string>
    <string name="yes">必须</string>
    <string name="no_app_store_found">没有邮件类App</string>
    <string name="action_delete_from_bookmarks">取消收藏该编文章</string>
    <string name="save_picture_to_local">保存图片到本地？</string>
    <string name="save_picture_mes">保存图片到手机</string>
    <string name="share_picture_to_wx">分享图片给微信好友</string>
    <string name="share_article_to_wx">微信</string>
    <string name="share_picture_to_wx_friend_community">分享图片到朋友圈</string>
    <string name="share_article_to_wx_friend_community">朋友圈</string>
    <string name="share_picture_to_QQ">分享图片给QQ好友</string>
    <string name="share_article_to_QQ">QQ好友</string>
    <string name="share_article_to_wxMark">微信收藏</string>
    <string name="share_picture_to_weibo">分享图片到微博</string>
    <string name="share_success">分享成功</string>
    <string name="share_onerror">分享失败</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_again">请重新上一步操作</string>
    <string name="save_picture_to_local_title">提示</string>
    <string name="save_picture_to_local_message">QQ只能分享本地图片,请确认是否同意保存图片到本地!</string>
    <string name="agreement">同意</string>
    <string name="cancel">取消</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="choice_share_way">选择分享至:</string>
    <string name="share_article">分享文章</string>


    <string name="welcome_pre">Pre</string>
    <string name="welcome_next">Next</string>
    <string name="welcome_finish">Finish</string>
    <string name="welcoem_description_one_head">优质阅读</string>
    <string name="welcoem_description_one_body">精选互联网科技技术文章</string>
    <string name="welcoem_description_two_head">福利图片</string>
    <string name="welcoem_description_two_body">好看的图片记得保存或者分享哦</string>
    <string name="welcoem_description_three_head">好东西要分享</string>
    <string name="welcoem_description_three_body">新添文章分享和收藏</string>


    <!--微信-->
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>

    <!--other-->
    <string name="no_data">无收藏</string>
</resources>
