<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_name">
        <Preference android:title="@string/app_name" />
        <Preference android:title="@string/about_version" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_anthor">
        <Preference
            android:key="author"
            android:summary="@string/about_please"
            android:title="@string/about_name" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_support">
        <Preference
            android:key="commit_bug"
            android:title="@string/about_bug" />
        <Preference
            android:summary="@string/about_commit_bug"
            android:title="@string/about_email" />
        <Preference
            android:summary="@string/anout_thank_gank"
            android:title="@string/about_thank" />
    </PreferenceCategory>
</PreferenceScreen>