<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/mdtp_white">

    <RelativeLayout
        android:id="@+id/QQRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_QQ"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_share_qq"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/txt_QQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_QQ"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:text="@string/share_article_to_QQ"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/wxRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <ImageView
            android:id="@+id/img_wx"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_share_wx"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/txt_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_wx"
            android:layout_marginTop="5dp"
            android:text="@string/share_article_to_wx"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/communityRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp">
        <ImageView
            android:id="@+id/img_community"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_share_wx_comminity"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/txt_community"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_community"
            android:layout_marginTop="5dp"
            android:text="@string/share_article_to_wx_friend_community"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/markRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_mark"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_wx_mark_ios"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/txt_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_mark"
            android:layout_marginTop="5dp"
            android:text="@string/share_article_to_wxMark"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</LinearLayout>