<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context="com.gank.welcome.WelcomeActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <!--分割线
    view——>View
    issue:
    https://stackoverflow.com/questions/34259335/npe-while-inflating-layout-attempt-to-invoke-virtual-method-boolean-java-lang/34260009-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="?attr/actionBarSize"
        android:alpha="0.12"
        android:background="@android:color/white"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        >


        <ImageButton
            android:id="@+id/btnPre"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:contentDescription="@string/welcome_pre"
            android:padding="@dimen/activity_horizontal_margin"
            android:tint="@android:color/white"
            android:visibility="gone"
            android:src="@drawable/welcome_chevron_left_black_24dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/indicator1"
                android:layout_width="@dimen/appbar_padding_top"
                android:layout_height="@dimen/appbar_padding_top"
                android:src="@drawable/wel_onboarding_indicator_selected"/>
            <ImageView
                android:id="@+id/indicator2"
                android:layout_width="@dimen/appbar_padding_top"
                android:layout_height="@dimen/appbar_padding_top"
                android:layout_margin="@dimen/appbar_padding_top"
                android:src="@drawable/wel_onboarding_indicator_unselected"/>
            <ImageView
                android:id="@+id/indicator3"
                android:layout_width="@dimen/appbar_padding_top"
                android:layout_height="@dimen/appbar_padding_top"
                android:src="@drawable/wel_onboarding_indicator_unselected"/>
        </LinearLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnFinish"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:text="@string/welcome_finish"
            android:textColor="@android:color/white"
            android:visibility="gone"/>
        <ImageButton
            android:id="@+id/btnNext"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:contentDescription="@string/welcome_next"
            android:padding="@dimen/activity_horizontal_margin"
            android:tint="@android:color/white"
            android:src="@drawable/welcome_chevron_right_black_24dp"/>
    </FrameLayout>



</android.support.design.widget.CoordinatorLayout>
